	  notify is received.  Affected file silcd/packet_receive.c.

	* Close all connections when shutting down the server by sending
	  DISCONNECT packet.  Close all listeners too when shutting
	  down the server.  Affected file silcd/server.c.

	* Handle DISCONNECT packet correctly in client library by
	  calling the "disconnect" client operation.  Affected file
	  lib/silcclient/client.c.

Tue Jun 18 10:26:27 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* The log file is not dupped internally anymore in
	  lib/silcutil/silclog.c.  Fixed memory leaks too.

	* The scheduler now dispatches all pending timeout tasks
	  when it is uninitialized with silc_schedule_uninit.
	  Affected file lib/silcutil/silcschedule.c.

Mon Jun 17 21:30:55 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added --enable-stack-trace option to configure.  Added
	  memory allocation stack trace support.  Added files
	  lib/silcutil/stacktrace.[ch].  Affected files are
	  lib/silcutil/silcmemory.[ch].

	* Fixed memory leaks from libraries and server.  Affected
	  files around the tree.

	* Reverted back a fix made to CUMODE which broke it.
	  Affected file silcd/command.c.

Sun Jun 16 11:49:45 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added SILC_MESSAGE_FLAG_UTF8 to the protocol specs and the
	  core library, and implemented it.  All textual messages SHOULD
	  use this flag and the message MUST be UTF-8 encoded.
	  All text messages sent by Irssi SILC client are now UTF-8
	  encoded (regardless whether the terminal supports UTF-8 or not).
	  Affected files are lib/silccore/silcchannel.h,
	  irssi/src/silc/core/silc-servers.c, silc-channels.c and
	  client_ops.c.

Sat Jun 15 18:23:39 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Added lots of new statistics updating that was missing from
	  the server and router code.  Affected files in silcd/.

	* Sending SIGUSR1 signal to server now dumps the current
	  server statistics into /tmp directory.  Affected file is